<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TargetMaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">user@example.com</string>
    <string name="pass_confirm">Password Confirmation</string>
    <string name="register_text">Register</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="confPassword_error">Password confirmation cannot be empty</string>
    <string name="confPassword_err">Password confirmation does not match the password</string>
    <string-array name="tabs">
        <item>Map</item>
        <item>Audio</item>
    </string-array>
    <string name="title_activity_activity_example">ActivityExample</string>
</resources>
