<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/userName"
        android:textColorHighlight="#303F9F"
        android:text="">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:textColorHighlight="#303F9F"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:textColorHighlight="#303F9F"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="" />

    <EditText
        android:id="@+id/pass_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColorHighlight="#303F9F"
        android:ems="10"
        android:hint="@string/pass_confirm"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_confirm"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:onClick="registrationBtnHandler"/>
</RelativeLayout>
