<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_log"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/userName"
        android:textColorHighlight="#303F9F"
        android:text="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_log"
        android:id="@+id/pass_log"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHighlight="#303F9F"
        android:text="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_below="@id/pass_log"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:onClick="loginBtnHandler"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_register"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:text="@string/register_text"
        android:textColor="#303F9F"
        android:clickable="true"
        android:onClick="startRegistrationForm"/>


</RelativeLayout>
